test/compile_errors/err_fstring_spec_sign_on_str.w
//! expect-check-fail: sign '+' requires numeric type
fn main:
    let s = "hello"
    print(f"{s:+}")
